corrected misstake at package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "skeletonJS",
   "version": "0.0.1",
   "bin": {
-    "verstack": "bin/verstac"
+    "verstack": "bin/verstack"
   },
   "dependencies": {
     "nomnom": "*",
