--- a/archetype/package.json
+++ b/archetype/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "gulp": "^3.8.10",
     "gulp-jade": "*",
+    "gulp-data": "*",
     "gulp-stylus": "*",
     "nib":"*",
     "gulp-concat": "*",
