added build command.

--- a/archetype/package.json
+++ b/archetype/package.json
@@ -10,7 +10,7 @@
     "gulp-data": "*",
     "gulp-stylus": "*",
     "nib":"*",
-    "gulp-concat": "*",
+    "gulp-uglify": "*",
     "gulp-imagemin": "*",
     "gulp-livereload": "*",
     "tiny-lr": "*",
