--- a/package.json
+++ b/package.json
@@ -12,10 +12,24 @@
   },
   "dependencies": {
     "nomnom": "*",
+    "prompt": "*",
+    "async": "*",
     "underscore": "*",
     "async": "*",
-    "prompt": "*",
-    "fs-extra": "*"
+    "fs-extra": "*",
+    "browser-sync": "*",
+    "gulp": "^3.8.10",
+    "gulp-autoprefixer": "^2.1.0",
+    "gulp-browserify": "*",
+    "gulp-data": "*",
+    "gulp-imagemin": "*",
+    "gulp-jade": "*",
+    "del": "*",
+    "gulp-stylus": "*",
+    "gulp-uglify": "*",
+    "nib": "*",
+    "require-dir": "*",
+    "runSequence": "*"
   },
   "devDependencies": {},
   "license": "MIT"
