removed gulp watch. added chokidar.

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "gulp-stylus": "*",
     "gulp-uglify": "*",
     "nib": "*",
-    "run-sequence": "*"
+    "async": "*",
+    "chokidar": "*"
   },
   "devDependencies": {},
   "license": "MIT"
